--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body{
     padding: 30px;
     width: max-content;
     margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 18px;
 }
 .prep{
