--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body{
     border-radius: 10px;
 }
 img{
-    width: 550px;
+    width: 40em;
     height: auto;
     border-radius: 10px;
     /* display: block; */
@@ -34,7 +34,7 @@ img{
 p{
     display: inline-block;
     margin-top: 0;
-    font-size: 13px;
+    font-size: 1rem;
 }
 h1,h2{
     font-family: "Young Serif", serif;
@@ -54,31 +54,31 @@ h3{
     margin-bottom: 10px;
 }
 ul{
-    font-size: 13px;
+    font-size: 1rem;
     line-height: 1.8;
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 22px;
 }
 ul li{
-    padding-left: 15px;
+    padding-left: 1em;
 }
 
 ol{
-    font-size: 13px;
+    font-size: 1rem;
     line-height: 1.5;
-    padding-left: 23px;
+    padding-left: 1.5em;
 }
 ol li{
     padding-left: 10px;
-    margin: 8px;
+    margin: 0.5em;
 }
 ol li::marker{
     color: hsl(14, 45%, 36%);
     font-weight: 700;
 }
 table { 
-    font-size: 13px;
+    font-size: 1rem;
     border-collapse: collapse; 
 }
 tr {
